fixed animation for div shifting

--- a/src/styles/carousel.css
+++ b/src/styles/carousel.css
@@ -18,7 +18,11 @@
   width: 100%;
   background-color: rgba(0, 0, 0, 0.575);
   backdrop-filter: blur(0px);
-  transition: all ease-in-out 0.6s;
+  transition: all ease-in-out 0.4s;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .explore-button {
@@ -28,6 +32,7 @@
   transform: translateX(-50%);
   padding: 0.5rem;
   transition: all ease-out 0.2s;
+  backdrop-filter: blur(1px);
 }
 
 .explore-button:hover {
@@ -37,5 +42,22 @@
 }
 
 .image-cover:has(> .explore-button:hover) {
-  backdrop-filter: blur(5px);
+  backdrop-filter: blur(10px);
+}
+
+.place-name {
+  font-family: "Chillax", "Courier New", Courier, monospace;
+  font-weight: 500;
+  color: rgb(57, 211, 19);
+  text-align: right;
+  width: calc(65vw);
+  margin: 0;
+}
+
+.place-quote {
+  font-family: "Anton", "Franklin Gothic Medium", "Arial Narrow", Arial,
+    sans-serif;
+  font-size: calc(1rem + 5vw);
+  margin: 0 15vw;
+  text-align: right;
 }
